# ProjectPenney

./: .gitignore  README.md  main.py  pyproject.toml  testing.ipynb
.ipynb_checkpoints/: testing-checkpoint.ipynb
matplotlib/: pyproject.toml
pandas/: pyproject.toml
src/: Decks_Class.py  datadashboard.py  engine.py  helpers.py  processing.py  qtcomponents.py  used_seeds.npy  visualization.py
src/.ipynb_checkpoints/: Decks_Class-checkpoint.py  Testing-checkpoint.ipynb  helpers-checkpoint.py  processing-checkpoint.py  visualization-checkpoint.py
src/Deck_Counts/: Deck_Counts_hand_size3.npy
src/Decks/: deck_lengths.npy  used_seeds.npy
src/Decks/loaded/: seed_0_(hand_size3).npz  seed_2_(hand_size3).npz  seed_3_(hand_size3).npz
src/Decks/seeds+num_cards/: deck_lengths.npy  used_seeds.npy
src/Decks/to_load/: Placeholder.txt
src/Scores/: C_Losses_hand_size2.npy  C_Losses_hand_size3.npy  C_Losses_hand_size4.npy  C_Losses_hand_size5.npy  C_Losses_hand_size6.npy  C_Losses_hand_size7.npy  C_Wins_hand_size2.npy  C_Wins_hand_size3.npy  C_Wins_hand_size4.npy  C_Wins_hand_size5.npy  C_Wins_hand_size6.npy  C_Wins_hand_size7.npy  T_Losses_hand_size2.npy  T_Losses_hand_size3.npy  T_Losses_hand_size4.npy  T_Losses_hand_size5.npy  T_Losses_hand_size6.npy  T_Losses_hand_size7.npy  T_Wins_hand_size2.npy  T_Wins_hand_size3.npy  T_Wins_hand_size4.npy  T_Wins_hand_size5.npy  T_Wins_hand_size6.npy  T_Wins_hand_size7.npy
src/Scores/C_LOSSES/: C_Losses_seed_0.npy  C_Losses_seed_1.npy  C_Losses_seed_10.npy  C_Losses_seed_11.npy  C_Losses_seed_12.npy  C_Losses_seed_13.npy  (+10 more)
(+77 files in other folders)
